# plugin

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultBuildFlags.cmake  Doxyfile.in.cmake  HTML.manifest  INSTALL.txt  PLUGIN_API.html  PLUGIN_FACTORY_CREATE.html  PLUGIN_FACTORY_DECLARATION.html  PLUGIN_FACTORY_DEFINITION.html  PLUGIN_FACTORY_DESTROY.html  README.txt  index.html  params.json  version.cmake
Plugin/: IPlugin.html  PluginLoader.html
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/MyExe/: CMakeLists.txt
examples/MyExe/src/: main.cpp
examples/MyPlugin/: CMakeLists.txt
examples/PluginExample/: CMakeLists.txt
examples/PluginExample/src/: MyPlugin.cpp  MyPlugin.h
examples/PluginLoaderExample/: CMakeLists.txt
examples/PluginLoaderExample/src/: main.cpp
include/Plugin/: ExportAPI.h  IPlugin.h  PluginFactory.h  PluginLoader.h
plugin/: examples.html  installation.html  reference.html
scripts/: config.sh  delivery.sh
share/: CMakeLists.txt
share/cmake/: CMakeLists.txt  PluginConfig.cmake.in  PluginConfigVersion.cmake.in
share/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in.cmake  plugin.qbk
src/: CMakeLists.txt
src/example/: CMakeLists.txt
src/example/MyExe/src/: main.cpp
src/example/MyPlugin/: CMakeLists.txt
src/example/MyPlugin/src/: MyPlugin.cpp  MyPlugin.h
src/test/: main.cpp  test.cpp
tests/: CMakeLists.txt  main.cpp  test.cpp
tests/src/: test.cpp
